# labor-law-assistant

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md
.claude/: AGENTS.md  SKILLS.md  settings.json
.claude/agents/: senior-accessibility.md  senior-ai-engineer.md  senior-analytics.md  senior-api-designer.md  senior-app.md  senior-architect.md  senior-ba.md  senior-backend.md  senior-cloud-architect.md  senior-code-reviewer.md  senior-compliance.md  senior-content-strategist.md  senior-customer-support.md  senior-data-engineer.md  senior-data-scientist.md  senior-dba.md  senior-debugger.md  senior-devops.md  senior-error-resolver.md  senior-frontend.md  senior-full-stack.md  senior-i18n.md  senior-legal-expert.md  senior-network.md  senior-onboarding-specialist.md  senior-performance.md  senior-pm.md  senior-po.md  senior-qa.md  senior-qc.md  senior-release-manager.md  senior-sa.md  senior-scrum-master.md  senior-sd.md  senior-security.md  senior-seo.md  senior-sre.md  senior-tech-lead.md  senior-technical-support.md  senior-technical-writer.md  (+5 more)
.claude/commands/: fix.md  release.md  review.md  test.md  write.md
.claude/hooks/: check-spec.sh  remind-spec.sh
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: health.py
backend/app/core/: exceptions.py
backend/app/schemas/: error.py  health.py
backend/tests/: conftest.py
backend/tests/integration/: test_cors.py  test_exception_handler.py  test_health.py
backend/tests/unit/: test_config.py
docs/: PRD.md
docs/adr/: README.md  (+10 more)
(+70 files in other folders)
